# ai4material_design

./: .gitignore  .gitmodules  8.9e-4.json  BP-wide-tuned-no-force.ipynb  BP.ipynb  Catboost_gpu_cpu_comparison.ipynb  Data discrepancy.ipynb  Defect representation.ipynb  Defect_representation.py  Dockerfile  GNN-relaxation.ipynb  GNN-traj.ipynb  GraphNN-wide.ipynb  KIM potential.ipynb  Makefile  PBC check.ipynb  README.md  Rotation investigation.ipynb  SetTransformer.ipynb  Summary analysis.ipynb  base_trainer.py  catboost-05-data.ipynb  cgcnn.ipynb  data.dvc  data.py  data_format.yaml  defect_representation.py  dichalcogenides_innopolis_202105 problems.ipynb  dvc.yaml  finish_megnet_pytorch_experiments_nscc_paper.sh  gemnet-train-best-config.sbatch  gemnet_trainer.py  gnn-traj.pkl  hyperparam_tuning.py  megnet-05-data-E-per-atom.ipynb  megnet-05-data-E-total.ipynb  megnet-05-data-combined.ipynb  megnet-05-data-defect-only-E-per-atom-random-rotations.ipynb  megnet-05-data-defect-only-E-per-atom-randrotation-test.ipynb  megnet-05-data-defect-only-E-per-atom.ipynb  (+28 more)
.dvc/: config
callback/: val_mae_01768_0.014190.hdf5  val_mae_03656_3.022923.hdf5  val_mae_04187_0.016599.hdf5
catboost_experiment_reproduction/: catboost_predictions.ipynb  make_features.py  train_model.py
checkpoints/: .gitignore  checkpoint__diffcoord_1600.pth.dvc
datasets/: .gitignore  Makefile  README.md  TMDC22.md  cgcnn_data_format.dvc  dichalcogenides8x8_V3_raw_nus_202109.dvc  dichalcogenides8x8_V3_renamed_202109.dvc  dichalcogenides8x8_innopolis_202108.dvc  dichalcogenides8x8_vasp_nus_202110.dvc  dichalcogenides_innopolis_202105.dvc  dichalcogenides_innopolis_features.dvc  dichalcogenides_nus_small_cell_202111.dvc  dichalcogenides_poscar_innopolis_202109.dvc  dichalcogenides_vasp_nus_mos2_small_cell_202110.dvc  dichalcogenides_x1s6_202109.dvc  initial_coordinates_wse2_pengru_innopolis_converted_202111.dvc  paper_experiments.dvc  paper_experiments_catboost.dvc  paper_experiments_x1s6_202109.dvc  predicted_dichalcogenides_innopolis_202105_v1.dvc  predicted_dichalcogenides_innopolis_202105_v2.dvc  predicted_dichalcogenides_innopolis_202105_v3.dvc  predicted_dichalcogenides_innopolis_202105_v4.dvc  predicted_dichalcogenides_innopolis_202105_v5.dvc  predicted_dichalcogenides_innopolis_202105_v6.dvc  preprocessed_dichalcogenides_innopolis.dvc  processed_ruslan_202104.dvc  raw_pengru_202104_MoS2-vacancies.dvc  raw_ruslan_202104.dvc  raw_ruslan_202104_gpaw-MoS2.dvc  single_atom_energies.csv
defects_generation/: X1S6_descriptors.json  example_descriptors.json  generation.ipynb  generation.py  random_generation.ipynb  random_generation.py
dichalcogenides8x8_vasp_nus_202110/: .gitignore  mos2_8x8_5933.tar.gz.dvc
docs/: CONSTRUCTOR-ALL.md  CONSTRUCTOR.md  (+7 more)
(+2249 files in other folders)
