[tool.poetry]
name = "2d-defects-potential-learning"
version = "0.5.1"
description = "Sparse representation of defects in 2D materials: models, expeiments, and results."
authors = ["Abdalaziz Rashid Al-Maeeni <al-maeeni@hse.ru>",
    	   "Nikita Kazeev <kna@nus.edu.sg>",
           "Ruslan Lukin <r.lukin@innopolis.ru>",
           "Maxim Faleev <m.faleev@innopolis.university>",
	       "Ignat Romanov <romanov.ignat.p@gmail.com>"]

[tool.poetry.dependencies]
plumbum = "^1.7.2"
python = ">=3.8,<4.0.0"
scikit-learn = ">=0.24.1"
pandas = ">=1.5.0"
matplotlib = ">=3.4.1"
ase = ">=3.21.1"
optuna = ">=2.7.0"
madgrad = ">=1.1"
nglview = ">=3.0.3"
pynvml = ">=11.0.0"
wandb = ">=0.12.1"
dvc = {extras = ["s3"], version = ">=2.8.3"}
omegaconf = ">=2.1.1"
httplib2 = ">=0.20.2"
catboost = ">=1.0.3"
matminer = ">=0.7.3"
ratarmount = ">=0.11.3"
pyyaml = ">=6.0.0"
prettytable = ">=3.5.0"
ipympl = ">=0.9.3"
ipywidgets = ">=8.0.4"

[tool.poetry.dev-dependencies]
yapf = ">=0.31.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
